Refactor, replace model by dto