@@ -5,44 +5,43 @@ import com.diverger.swapi.application.dto.PersonInfoResponse;
 import com.diverger.swapi.domain.model.Person;
 import com.diverger.swapi.infrastructure.dto.FilmDto;
 import com.diverger.swapi.infrastructure.dto.PersonDto;
+import com.diverger.swapi.infrastructure.dto.StarshipDto;
+import com.diverger.swapi.infrastructure.dto.VehicleDto;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class PersonMapper {
-    public static Person toDomain(PersonDto dto) {
-        return Person.builder()
-                .name(dto.getName())
-                .height(dto.getHeight())
-                .mass(dto.getMass())
-                .hairColor(dto.getHairColor())
-                .eyeColor(dto.getEyeColor())
-                .birthYear(dto.getBirthYear())
-                .gender(dto.getGender())
-                .homeworld(dto.getHomeworld())
-                .vehicles(dto.getVehicles())
-                .starships(dto.getStarships())
-                .films(dto.getFilms())
-                .species(dto.getSpecies())
-                .created(dto.getCreated())
-                .edited(dto.getEdited())
+    public static PersonDto toDto(Person person, List<VehicleDto> vehicleDtos, List<StarshipDto> starshipDtos, List<FilmDto> filmDtos) {
+        return PersonDto.builder()
+                .name(person.getName())
+                .height(person.getHeight())
+                .mass(person.getMass())
+                .hairColor(person.getHairColor())
+                .eyeColor(person.getEyeColor())
+                .birthYear(person.getBirthYear())
+                .gender(person.getGender())
+                .homeworld(person.getHomeworld())
+                .vehicles(vehicleDtos)
+                .starships(starshipDtos)
+                .films(filmDtos)
+                .created(person.getCreated())
+                .edited(person.getEdited())
                 .build();
     }
 
 
-
-    public static PersonInfoResponse toResponse(Person person, String planetName, String fastestVehicleDriven, List<FilmDto> films) {
-        List<FilmResponse> filmResponses = films.stream()
-                .map(filmDto -> new FilmResponse(filmDto.getTitle(), filmDto.getReleaseDate()))
-                .collect(Collectors.toList());
+    public static PersonInfoResponse toResponse(PersonDto person) {
+        List<FilmResponse> filmResponses = person.getFilms().stream()
+                .map(filmDto -> new FilmResponse(filmDto.getTitle(), filmDto.getReleaseDate())).toList();
 
         return new PersonInfoResponse(
                 person.getName(),
                 person.getBirthYear(),
                 person.getGender(),
-                planetName,
-                fastestVehicleDriven,
+                person.getPlanetName(),
+                person.getFastestVehicleDriven(),
                 filmResponses
         );
     }
+
 }
